Fix compiler issues